examples/redmine/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: redmine
  name: redmine
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: redmine
    deploymentconfig: redmine
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: redmine
        deploymentconfig: redmine
    spec:
      containers:
      - image: docker.io/redmine@sha256:8c6c7a0e9078eb135ea2c24b9e4f00a67a97583665f282338ea2cf8fcb288098
        imagePullPolicy: Always
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/src/redmine/files
          name: redmine-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: redmine-1
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - redmine
      from:
        kind: ImageStreamTag
        name: redmine:latest
        namespace: slac
    type: ImageChange
