examples/redmine/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redmine
  name: redmine
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deploymentconfig: redmine
  sessionAffinity: None
  type: ClusterIP
